--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "guzzlehttp/guzzle": "*",
+        "lexik/jwt-authentication-bundle": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
         "stripe/stripe-php": "^13.18",
@@ -36,6 +37,7 @@
         "symfony/property-info": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
+        "symfony/security-csrf": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/stimulus-bundle": "^2.16",
         "symfony/string": "7.0.*",
@@ -100,6 +102,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
