--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,39 +1,39 @@
+# config/packages/security.yaml
+
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    
     providers:
-        users_in_memory: { memory: null }
+        # Configuration du fournisseur de données utilisateurs (exemple avec mémoire)
+        users_in_memory:
+            memory:
+                users:
+                    user1:
+                        password: '$2y$13$yOz9e1EjQwORodc5A5v2cO2T1IvPn6Z8YmQb4KZu1hfEo5VfQFfA6' # mot de passe "password"
+                        roles: ['ROLE_USER']
+                    admin:
+                        password: '$2y$13$N0H7rjzg/TOi5f3u4J2k7OrIeP8QgUQkL6bN7gJg4jYv2OJrcOpLa' # mot de passe "password"
+                        roles: ['ROLE_ADMIN']
+    
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
         main:
             lazy: true
             provider: users_in_memory
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+            # Configuration de l'authentification par formulaire
+            form_login:
+                login_path: app_login  # Chemin vers le formulaire de connexion
+                check_path: app_login  # Chemin de vérification POST pour la connexion
+            
+            # Optionnel : Configuration du logout
+            logout:
+                path: app_logout  # Chemin pour se déconnecter
+                target: app_login  # Redirection après la déconnexion
+    
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
