--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "guzzlehttp/guzzle": "*",
@@ -27,6 +26,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/google-mailer": "7.0.*",
         "symfony/http-client": "7.0.*",
+        "symfony/http-foundation": "7.0.*",
         "symfony/intl": "7.0.*",
         "symfony/mailer": "7.0.*",
         "symfony/mime": "7.0.*",
@@ -40,11 +40,9 @@
         "symfony/security-csrf": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/stimulus-bundle": "^2.16",
-        "symfony/string": "7.0.*",
         "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/ux-turbo": "^2.16",
-        "symfony/validator": "7.0.*",
         "symfony/var-dumper": "7.0.*",
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
@@ -102,14 +100,17 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-fixtures-bundle": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.60",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "7.0.*",
+        "symfony/string": "7.0.*",
+        "symfony/validator": "7.0.*",
         "symfony/web-profiler-bundle": "7.0.*"
     }
 }
