--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "*",
-        "lexik/jwt-authentication-bundle": "^3.0",
+        "lexik/jwt-authentication-bundle": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
         "stripe/stripe-php": "^13.18",
@@ -32,6 +34,7 @@
         "symfony/mime": "7.0.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "7.0.*",
+        "symfony/password-hasher": "7.0.*",
         "symfony/process": "7.0.*",
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
@@ -100,7 +103,6 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-fixtures-bundle": "*",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
