--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,5 +1,5 @@
 lexik_jwt_authentication:
-    secret_key: '%kernel.project_dir%/config/jwt/private.pem' # Chemin vers la clé privée
-    public_key: '%kernel.project_dir%/config/jwt/public.pem'  # Chemin vers la clé publique
+    secret_key: '%env(resolve:JWT_SECRET_KEY)%'
+    public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
-    token_ttl: 3600 # Temps de vie du jeton en secondes (1 heure)
+    token_ttl: 3600
