--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,9 +6,18 @@ security:
             algorithm: auto
 
     providers:
-        app_user_provider:
+        chain_provider:
+            chain:
+                providers: ['client_provider', 'employe_provider']
+
+        client_provider:
             entity:
-                class: App\Entity\Client  # or App\Entity\User if you have a common base class
+                class: App\Entity\Client
+                property: AdresseEmail
+
+        employe_provider:
+            entity:
+                class: App\Entity\Employe
                 property: AdresseEmail
 
     firewalls:
@@ -25,13 +34,16 @@ security:
                 password_path: MotDePasse
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                provider: chain_provider
 
         api:
             pattern: ^/api
             stateless: true
-            jwt: ~
+            jwt:
+                provider: chain_provider  # Spécifie le fournisseur pour le firewall JWT
 
     access_control:
         - { path: ^/api/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/entrepots, roles: ROLE_PARTICULIER }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/super-admin, roles: ROLE_SUPER_ADMIN }
+
