--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,15 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "*",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/mongodb-odm": "*",
+        "doctrine/mongodb-odm-bundle": "*",
         "doctrine/orm": "^3.1",
         "guzzlehttp/guzzle": "*",
         "lexik/jwt-authentication-bundle": "^3.0",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
         "stripe/stripe-php": "^13.18",
