--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -31,6 +31,13 @@ api_modifier_employe:
   path: /api/inscription/employe/employe/{id}
   controller: 'App\Controller\api\InscriptionEmployeController::modifierEmploye'
   methods: ['PUT']
+# config/routes.yaml
+
+visit_stat_log:
+    path: /api/log-visit
+    controller: App\Controller\VisitStatController::logVisit
+    methods: POST
+
 
 # config/routes.yaml
 
