--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         php-version: '8.0'
     - uses: actions/checkout@v4
-    - name: Copy .env.test.local
+    - name: Copy .env.local
       run: php -r "file_exists('.env.local') || copy('.env.test');"
     - name: Cache Composer packages
       id: composer-cache
