--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -26,7 +26,7 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v4
     - name: Copy .env.local
-      run: php -r "file_exists('.env.local') || copy('.env.test');"
+      run: php -r "file_exists('.env.local') || copy('.env.local');"
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
